--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,10 +1,10 @@
 included:
-  - App/Classes
+  - GoTCombine/
 disabled_rules:
   - trailing_whitespace
 line_length: 132
 identifier_name:
   min_length:
     warning: 1
-force_cast: 
+force_cast:
   severity: warning
